# lidar_clustering

./: .gitignore  README.md  startup.bash
src/lidar_euclidean_cluster_detect/: CMakeLists.txt  package.xml
src/lidar_euclidean_cluster_detect/include/: clusterExt.h
src/lidar_euclidean_cluster_detect/include/autoware_msgs/: VehicleStatus.h
src/lidar_euclidean_cluster_detect/launch/: euclidean_clustering_Exp.launch  lidar_euclidean_cluster_detect.launch
src/lidar_euclidean_cluster_detect/nodes/lidar_euclidean_cluster_detect/: cluster.cpp  clusterExt.cpp  convert2protobuf.cpp  filter_by_map_features.cpp  lidar_euclidean_cluster_detect.cpp
src/lidar_euclidean_cluster_detect/proto/: CMakeLists.txt
src/lidar_euclidean_cluster_detect/proto/common_msgs/geometry_msgs/msg/: Point.proto  Pose.proto  PoseArray.proto  Quaternion.proto  SensorObstacle.proto
src/lidar_euclidean_cluster_detect/proto/std_msgs/msg/: Header.proto
src/lidar_euclidean_cluster_detect/test/: CMakeLists.txt  filter_pointclouds_by_map.cpp
src/obstaclePositionArray/: CMakeLists.txt  package.xml
src/obstaclePositionArray/msg/: obstaclePositionArray.msg
